<resources>
    <string name="app_name">miertkelleztafeladatotcsinalni</string>
    <string name="nav_listing_title">Listing</string>
    <string name="nav_create_title">Create</string>
    <string name="nav_modify_title">Modify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_text">Delete</string>
    <string name="modify_text">Modify</string>
    <string name="titleHint">Title</string>
    <string name="authorHint">Author</string>
    <string name="pageHint">Page Count</string>
    <string name="release_yearHint">Release Year</string>
    <string name="createText">Create</string>
</resources>